--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "homepage": "https://mld.ng/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
     "notiflix": "^3.2.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-curved-text": "^3.0.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
