--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "react-curved-text": "^3.0.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
-    "three": "^0.152.2",
+    "three": "^0.160.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
