--- a/package.json
+++ b/package.json
@@ -1,59 +1,40 @@
 {
-  "name": "ant",
-  "version": "0.1.0",
+  "name": "my-app",
   "private": true,
-  "homepage": "https://ant.ng/",
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@react-three/drei": "^9.56.8",
-    "@react-three/fiber": "^8.13.7",
-    "@splinetool/react-spline": "^4.0.0",
-    "@splinetool/runtime": "^1.10.11",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^3.0.0-beta.6",
-    "axios": "^0.24.0",
-    "emailjs-com": "^3.2.0",
-    "notiflix": "^3.2.2",
-    "react": "^18.3.1",
-    "react-curved-text": "^3.0.1",
-    "react-dom": "^18.3.1",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
+    "@tailwindcss/vite": "^4.1.10",
+    "aos": "^2.3.4",
+    "axios": "^1.10.0",
+    "framer-motion": "^12.18.1",
+    "notiflix": "^3.2.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^7.6.2",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "5.0.0",
-    "react-transition-group": "^4.4.2",
-    "three": "^0.160.1",
-    "web-vitals": "^2.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
+    "@eslint/js": "^9.25.0",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "vite": "^6.3.5"
   }
 }
